Switched to ranch for socket acceptor.

--- a/rebar.config
+++ b/rebar.config
@@ -4,5 +4,6 @@
 {erl_opts, [fail_on_warning, debug_info]}.
 
 {deps, [
-       {meck, ".*", {git, "https://github.com/eproxus/meck.git", {branch, "master"}}}
+       {meck, ".*", {git, "https://github.com/eproxus/meck.git", {branch, "master"}}},
+       {ranch, ".*", {git, "https://github.com/extend/ranch.git", {branch, "master"}}}
        ]}.
