--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,10 @@
 {cover_enable, true}.
 {eunit_opts, [verbose]}.
 
-{erl_opts, [fail_on_warning, debug_info]}.
+{erl_opts, [{parse_transform, lager_transform}, fail_on_warning, debug_info]}.
 
 {deps, [
        {meck, ".*", {git, "https://github.com/eproxus/meck.git", {branch, "master"}}},
-       {ranch, ".*", {git, "https://github.com/extend/ranch.git", {branch, "master"}}}
+       {ranch, ".*", {git, "https://github.com/extend/ranch.git", {branch, "master"}}},
+       {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}}
        ]}.
