Removed meck as a depencency.

--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,6 @@
 
 {erl_opts, [{parse_transform, lager_transform}, fail_on_warning, debug_info]}.
 
-{deps, [
-       {meck, ".*", {git, "https://github.com/eproxus/meck.git", {branch, "master"}}},
-       {ranch, ".*", {git, "https://github.com/extend/ranch.git", {branch, "master"}}},
-       {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}}
+{deps, [{ranch, ".*", {git, "https://github.com/extend/ranch.git", {branch, "master"}}},
+        {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}}
        ]}.
