--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {cover_enable, true}.
 {eunit_opts, [verbose]}.
 
-{erl_opts, [{parse_transform, lager_transform}, fail_on_warning, debug_info]}.
+{erl_opts, [fail_on_warning, debug_info]}.
 
 {deps, [{ranch, ".*", {git, "https://github.com/extend/ranch.git", {branch, "master"}}},
-        {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}}
+        {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", {branch, "master"}}}
        ]}.
