--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,34 @@
+%%% -*- mode: erlang -*-
+
 {cover_enable, true}.
 {eunit_opts, [verbose]}.
 
-{erl_opts, [fail_on_warning, debug_info]}.
+{erl_opts, [  debug_info
+           %, {d,'DEBUG',true}
+	   %, inline, native, {hipe, [o2]}
+           %, warn_missing_spec
+           %, strict_validation
+           %, {parse_transform, lager_transform}
+               ]}.
 
-{deps, [{ranch, ".*", {git, "https://github.com/extend/ranch.git", {branch, "master"}}},
-        {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", {branch, "master"}}}
+            %% , fail_on_warning
+            %% , warn_unused_vars
+            %% , warn_export_all
+            %% , warn_shadow_vars
+            %% , warn_unused_import
+            %% , warn_unused_function
+            %% , warn_bif_clash
+            %% , warn_unused_record
+            %% , warn_deprecated_function
+            %% , warn_obsolete_guard
+            %% , warn_export_vars
+            %% , warn_exported_vars
+            %% , warn_untyped_record
+
+
+{xref_checks, [undefined_function_calls]}.
+
+{deps, [  {ranch, ".*", {git, "https://github.com/extend/ranch.git", {branch, "master"}}}
+        , {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", {branch, "master"}}}
+        , {meck,  ".*", {git, "https://github.com/eproxus/meck.git", {branch, "master"}}}
        ]}.
