--- a/rebar.config
+++ b/rebar.config
@@ -4,11 +4,12 @@
 {eunit_opts, [verbose]}.
 
 {erl_opts, [  debug_info
-           %, {d,'DEBUG',true}
-	   %, inline, native, {hipe, [o2]}
-           %, warn_missing_spec
-           %, strict_validation
-           %, {parse_transform, lager_transform}
+            , {parse_transform, eqc_cover}
+            %%, {d,'DEBUG',true}
+	          %%, inline, native, {hipe, [o2]}
+            %%, warn_missing_spec
+            %%, strict_validation
+            %%, {parse_transform, lager_transform}
                ]}.
 
             %% , fail_on_warning
