--- a/rebar.config
+++ b/rebar.config
@@ -4,28 +4,26 @@
 {eunit_opts, [verbose]}.
 
 {erl_opts, [  debug_info
-            , {parse_transform, eqc_cover}
-            %%, {d,'DEBUG',true}
-	          %%, inline, native, {hipe, [o2]}
-            %%, warn_missing_spec
-            %%, strict_validation
-            %%, {parse_transform, lager_transform}
-               ]}.
-
-            %% , fail_on_warning
-            %% , warn_unused_vars
-            %% , warn_export_all
-            %% , warn_shadow_vars
-            %% , warn_unused_import
-            %% , warn_unused_function
-            %% , warn_bif_clash
-            %% , warn_unused_record
-            %% , warn_deprecated_function
-            %% , warn_obsolete_guard
-            %% , warn_export_vars
-            %% , warn_exported_vars
-            %% , warn_untyped_record
-
+          %%, {parse_transform, eqc_cover}
+          %%, {d,'DEBUG',true}
+	  %%, inline, native, {hipe, [o2]}
+          %%, warn_missing_spec
+          %%, strict_validation
+          %%, {parse_transform, lager_transform}
+          %%, fail_on_warning
+          %%, warn_unused_vars
+          %%, warn_export_all
+          %%, warn_shadow_vars
+          %%, warn_unused_import
+          %%, warn_unused_function
+          %%, warn_bif_clash
+          %%, warn_unused_record
+          %%, warn_deprecated_function
+          %%, warn_obsolete_guard
+          %%, warn_export_vars
+          %%, warn_exported_vars
+          %%, warn_untyped_record
+           ]}.
 
 {xref_checks, [undefined_function_calls]}.
 
