--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,21 @@
-
+#*
+*.beam
+*.dump
+*.o
+*.plt
+*~
+.#*
 .eunit
 .local_dialyzer_plt
 .rebar
+/.eunit
+/docs
+/ebin
+deps
+dialyzer.ignore-warnings
 dialyzer_unhandled_warnings
 dialyzer_warnings
-dialyzer.ignore-warnings
-deps
-priv
-*.o
-*.beam
-*.plt
-*~
-#*
-.#*
-*.dump
 ebin
-ebin/hyparerl.app
+ebin/gen_hypar.app
+erl_crash.dump
+priv
