Try to get rebar to compile the .erl files in the test directory.

--- a/rebar_eqc_ci.config
+++ b/rebar_eqc_ci.config
@@ -2,3 +2,4 @@
 {cover_enabled,         true}.
 {cover_export_enabled,  false}.
 {cover_print_enabled,   true}.
+{src_files,             ["src","test"]}.
