--- a/rebar_eqc_ci.config
+++ b/rebar_eqc_ci.config
@@ -1,4 +1,4 @@
-{erl_opts, [debug_info, {parse_transform, eqc_cover}]}.
+{erl_opts, [debug_info, {parse_transform, eqc_cover}, {src_dirs,["src","test"]}]}.
 {cover_enabled,         true}.
 {cover_export_enabled,  false}.
 {cover_print_enabled,   true}.
